# kvcache-sanity-check

./: .gitignore  CLAUDE.md  README.md  kvcache-check.yaml.example  pyproject.toml
corpus/: doc_ancient_rome.txt  doc_black_death.txt  doc_climate_change.txt  doc_history_of_aviation.txt  doc_history_of_the_internet.txt  doc_human_genome.txt  doc_l1_french_revolution.txt  doc_m1_apollo.txt  doc_m2_dna.txt  doc_machine_learning.txt  doc_quantum_mechanics.txt  doc_s1_python.txt  doc_s2_coffee.txt  doc_solar_system.txt  doc_world_war_ii.txt
docs/: kv-cache-corruption-failure-modes.md
docs/superpowers/plans/: 2026-04-28-temperature-configuration.md
kvcache_sanity/: corpus.py  evaluator.py  logger.py  main.py  models.py  replay.py  report.py  runner.py  tui.py
scenarios/: default.yaml
scripts/: download_corpus.py
