[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kvcache-sanity-check"
version = "0.1.0"
description = "Sanity check tool for LLM output correctness when using offloaded KV cache"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "textual>=0.55",
]

[project.scripts]
kvcache-check = "kvcache_sanity.main:cli"
kvcache-logs = "kvcache_sanity.tui:tui"

[tool.hatch.build.targets.wheel]
packages = ["kvcache_sanity"]
